--- a/referencias.bib
+++ b/referencias.bib
@@ -33,16 +33,22 @@
   file={1604480172_Python_read.pdf}
 }
 
-@book{sds,
+@book{sdsrp,
   author    = {Edzer Pebesma and Roger Bivand},
-  year      = {2023},
-  title     = {Spatial Data Science: With Applications in {R}},
-  publisher = {Chapman and Hall/CRC},
-  address   = {Boca Raton},
-  doi       = {10.1201/9780429459016},
+  year      = {2025},
+  title     = {Spatial Data Science: With Applications in {R} and {Python}},
   url       = {https://r-spatial.org/python/}
 }
 
+@book{sds,
+  author = {Edzer Pebesma and Roger Bivand},
+  year = 2023,
+  title = {Spatial Data Science: With Applications in {R}},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton},
+  URL = {https://doi.org/10.1201/9780429459016},
+  doi = {10.1201/9780429459016}
+}
 
 @book{lovelace2025geocomputation,
   title={Geocomputation with R},
@@ -59,6 +65,15 @@
   year={2025},
   publisher={CRC Press},
   url={https://py.geocompx.org/}
+}
+
+@book{dorman2025spatial,
+  author = {Dorman, Michael},
+  title = {Spatial Data Programming with Python},
+  year = {2025},
+  publisher = {Ben-Gurion University of the Negev},
+  url = {https://geobgu.xyz/py-2025/},
+  note = {Online book}
 }
 
 @book{geocomputation_julia,
