--- a/83-docker_desktop.qmd
+++ b/83-docker_desktop.qmd
@@ -1,7 +1,7 @@
 
 # Docker: Gestión de Contenedores e Imágenes {#docker-ref}
 
-## Procedimiento Incial
+## Procedimiento incial
 
 Antes de trabajar con Docker debes:
 
@@ -32,7 +32,7 @@ Finalmente trabajar con los contenedores dentro de VSCode:
 
 6. "Ctrl + Shif + P": "Dev Containers: Attach to Running Container..." y seleccionar container `image_sig_unal` (`contenedor_sig_unal`)
 
-## Comandos Docker
+## Comandos docker
 
 Use la siguiente tabla como referencia para gestionar sus contenedores desde la terminal de su sistema anfitrión (Windows/Mac/Linux).
 
@@ -47,7 +47,7 @@ Use la siguiente tabla como referencia para gestionar sus contenedores desde la 
 | **Prueba de Python** | `docker exec entorno_unal_sig python -c "import shapely; import geopandas; print('Python OK')"` | Confirmar que el stack de Python (GeoPandas/Shapely) está instalado. |
 | **Prueba de Julia** | `docker exec entorno_unal_sig julia -e "using LibGEOS; println('Julia OK')"` | Confirmar que Julia tiene acceso a los binarios geoespaciales. |
 
-## Compilación Avanzada
+## Compilación avanzada
 Para trabajar con entornos SIG, a menudo necesitamos reconstruir imágenes sin basura previa.
 
 * **Compilación Limpia (Sin Cache) con Log:**
@@ -59,7 +59,7 @@ Para trabajar con entornos SIG, a menudo necesitamos reconstruir imágenes sin b
 * **Cargar en VSCode:**
     Una vez el contenedor esté corriendo, use la extensión **Dev Containers** -> Botón verde inferior izquierdo -> *Attach to Running Container*.
 
-## Cambio de Ruta de Almacenamiento (Windows)
+## Cambio de ruta de almacenamiento (Windows)
 Si el disco `C:` se agota debido a las imágenes de Docker, siga estos pasos en **Docker Desktop**:
 1.  Vaya a **Settings** (engranaje).
 2.  **Resources** > **Advanced**.
@@ -67,11 +67,11 @@ Si el disco `C:` se agota debido a las imágenes de Docker, siga estos pasos en 
 4.  Presione **Apply & Restart**.
 
 
-## Optimización de Memoria y Swap {#sec-optimizacion-memoria}
+## Optimización de memoria RAM y swap {#sec-optimizacion-memoria}
 
 Cuando procesamos datos masivos (como imágenes Sentinel-2 o rásters globales), la RAM física de 16GB suele ser insuficiente. Para evitar que el sistema aborte los procesos con el error **"Killed"**, debemos configurar un "pulmón" de emergencia en dos niveles.
 
-### 1. El "Pulmón" de Windows: Memoria Virtual
+### 1. El "pulmón" de Windows: memoria virtual
 Obligamos a Windows a usar el disco duro como si fuera RAM de reserva. Si tiene un disco sólido (SSD) secundario con mucho espacio libre (ej. Disco D:), es el lugar ideal para configurarlo.
 
 1.  En el buscador de Windows, escriba: **"Ajustar la apariencia y rendimiento de Windows"**.
@@ -83,7 +83,7 @@ Obligamos a Windows a usar el disco duro como si fuera RAM de reserva. Si tiene 
     * **Tamaño máximo**: `32768` MB (32 GB).
 6.  Haga clic en **Establecer**, luego en **Aceptar** y **reinicie su computadora** para aplicar los cambios.
 
-### 2. El "Túnel" de Docker: Swap de WSL2
+### 2. El "túnel" de docker: swap de WSL2
 Docker Desktop corre sobre WSL2 (*Windows Subsystem for Linux*), el cual tiene su propio "presupuesto" limitado. Por defecto, este túnel es estrecho (máximo 4GB de Swap). Si no ampliamos esto, el contenedor nunca podrá aprovechar realmente el espacio que le asignamos a Windows.
 
 **Cómo ampliar la tubería:**
@@ -101,7 +101,7 @@ swap=16GB   # El nuevo tamaño de swap que verá el comando 'top' en la terminal
 
 ---
 
-## Higiene y Limpieza de Choque
+## Higiene y limpieza de choque
 
 Para garantizar que un renderizado de Quarto llegue al 100% sin colapsar el contenedor, aplique estas medidas de higiene:
 
@@ -114,6 +114,6 @@ Para garantizar que un renderizado de Quarto llegue al 100% sin colapsar el cont
 
 ::: {.callout-warning}
 ### Importante para Visualización
-En Julia y R, evite generar gráficos interactivos pesados dentro de bucles de procesamiento. La acumulación de objetos visuales en la memoria de VS Code es la causa número uno de colapsos en el contenedor.
+En Julia y R, evite generar gráficos interactivos pesados dentro de bucles de procesamiento. La acumulación de objetos visuales en la memoria de VSCode es la causa número uno de colapsos en el contenedor.
 :::
 
